--- a/makefile.vars
+++ b/makefile.vars
@@ -58,6 +58,7 @@ CUBIEBOARD_NAME=Cubieboard
 # Cubitruck	= sun7i-a20-cubietruck.dtb
 # Cubieboard4	= sun9i-a80-cubieboard4.dtb
 DTB=sun4i-a10-cubieboard.dtb
+DTS=sun4i-a10-cubieboard.dts
 
 # Target Architecture
 # Possible values: armel | armhf
